# colorMapping

./: README.md  package.xml  setup.cfg  setup.py
colorMapping/: colorMappingNode.py  extrinsicCalibrationNode.py  messedupMapping.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/colorMapping/lib/colorMapping/: color_mapping  extrinsic_calibration
install/colorMapping/share/colorMapping/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
